[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic_tac_toe_game"
version = "0.1.0"
dependencies = ["numpy"]
description = "A simple Tic-Tac-Toe game logic package"
authors = [{name = "Andrew Beaton"}]


[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
